Bug 370521 - [Regresion] SDDM breeze theme unable to change backgound.
Summary: [Regresion] SDDM breeze theme unable to change backgound.
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
: 354828 364164 375380 375817 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-10-12 07:02 UTC by Tony
Modified: 2017-02-16 13:16 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tony 2016-10-12 07:02:15 UTC
Can't change the background while using breeze theme, there is not problem while using any of the other themes on the repos (circles, elarun, maldives, maui).

This is the version i have installed:

sddm:
  Installed: 0.14.0+p16.04+git20161011.1715-0

sddm-theme-breeze:
  Installed: 4:5.8.1+p16.04+git20161012.0430-0

Reproducible: Always
Comment 1 Patrick Silva 2017-01-14 19:16:11 UTC
I can confirm this on Arch running plasma 5.9 beta.
Comment 2 Rog131 2017-01-15 12:25:26 UTC
The regression was introduced with the https://phabricator.kde.org/D2983 . The KCM patch is missing.

The Breeze SDDM theme is expecting 'type=color' or 'type=image' key in the /usr/share/sddm/themes/breeze/theme.conf.user

Workaround:
User can add the missing key to the theme.conf.user.

Examples: 
- https://bbs.archlinux.org/viewtopic.php?pid=1683640#p1683640
- https://forum.kde.org/viewtopic.php?f=289&t=137502#p370239
Comment 3 Tony 2017-01-17 04:42:24 UTC
(In reply to Rog131 from comment #2)
> The regression was introduced with the https://phabricator.kde.org/D2983 .
> The KCM patch is missing.
> 
> The Breeze SDDM theme is expecting 'type=color' or 'type=image' key in the
> /usr/share/sddm/themes/breeze/theme.conf.user
> 
> Workaround:
> User can add the missing key to the theme.conf.user.
> 
> Examples: 
> - https://bbs.archlinux.org/viewtopic.php?pid=1683640#p1683640
> - https://forum.kde.org/viewtopic.php?f=289&t=137502#p370239

Thumps for the workaround. Hope it gets properly fix soon.
Comment 4 retired 2017-01-21 20:57:35 UTC
*** Bug 375380 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2017-01-27 02:02:43 UTC
*** Bug 354828 has been marked as a duplicate of this bug. ***
Comment 6 Christoph Feck 2017-01-27 02:03:20 UTC
*** Bug 364164 has been marked as a duplicate of this bug. ***
Comment 7 Christoph Feck 2017-02-01 22:55:13 UTC
*** Bug 375817 has been marked as a duplicate of this bug. ***
Comment 8 Tony 2017-02-04 22:25:22 UTC
Also if you use this workaround and decide to change the background again youmay need to edit theme.conf.user and change the old value of "background="
for the name of the new background otherwise you'll will get a whiteisshh overall sddm theme.
Comment 9 David Edmundson 2017-02-06 14:53:04 UTC
Git commit 19e83b28161783d570bde2ced692a8b5f2236693 by David Edmundson.
Committed on 06/02/2017 at 12:12.
Pushed by davidedmundson into branch 'Plasma/5.9'.

Set wallpaper type in SDDM config

Summary:
aafa20f19c87 introduces a feature to the SDDM breeze theme where it will
only show a wallpaper is a config value "type" is set to image. This
isn't the default, making this KCM useless.

This patch sets the wallpaper type when saving.
FIXED-IN: 5.9.1

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4457

M  +3    -1    src/themeconfig.cpp

https://commits.kde.org/sddm-kcm/19e83b28161783d570bde2ced692a8b5f2236693
Comment 10 Tim Steinberger 2017-02-08 17:01:23 UTC
I've updated to 5.9.1 with sddm 0.14.0-r2 (on Gentoo) and theme.conf.user still doesn't get updated.  I change the wallpaper, hit apply, then when I leave that kcm module it asks me to save my changed (odd since I hit apply and the button grays out afterwards).  Whether I hit yes or no it fails to keep the change.
Comment 11 soee 2017-02-13 16:34:11 UTC
In Neon 5.9.1 if i set background image for sddm (through KCM) is has only white color as a background then. KCM is broken for a long time already (doesn't show selected image preview, wallpaper is not set properly - white color instead of image).

Bug should be reopened IMO.
Comment 12 Rog131 2017-02-14 16:28:50 UTC
At here the https://cgit.kde.org/sddm-kcm.git/commit/?id=19e83b28161783d570bde2ced692a8b5f2236693 is fixing the background change problem. But it is making a new bug: https://bugs.kde.org/show_bug.cgi?id=376484
Comment 13 Tim Steinberger 2017-02-16 13:16:22 UTC
(In reply to tbsteinb from comment #10)
> I've updated to 5.9.1 with sddm 0.14.0-r2 (on Gentoo) and theme.conf.user
> still doesn't get updated.  I change the wallpaper, hit apply, then when I
> leave that kcm module it asks me to save my changed (odd since I hit apply
> and the button grays out afterwards).  Whether I hit yes or no it fails to
> keep the change.

My mistake, I was using elogind instead of consolekit and it broke some of my permissions (Gentoo issue), switching back to consolekit resulted in being able to change sddm settings as expected.