Set wallpaper type in SDDM config

Summary:
aafa20f19c87 introduces a feature to the SDDM breeze theme where it will
only show a wallpaper is a config value "type" is set to image. This
isn't the default, making this KCM useless.

This patch sets the wallpaper type when saving.

BUG: 370521
FIXED-IN: 5.9.1

Reviewers: #plasma

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D4457